--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ bcrypt==4.3.0
 cffi==1.17.1
 cryptography==45.0.2
 Django==5.2.1
+django-cors-headers==4.7.0
 django-ninja==1.4.1
 django_extra==0.3
 dnspython==2.7.0
 email_validator==2.2.0
+gunicorn==23.0.0
 idna==3.10
-
+packaging==25.0
 paramiko==3.5.1
 pillow==11.2.1
 psycopg2-binary==2.9.10
@@ -22,4 +24,3 @@ sqlparse==0.5.3
 sshtunnel==0.4.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
-django-cors-headers==4.3.1
